package nature;

import things.Thing;

public abstract class NatureObject extends Thing {
    protected NatureObject(String title) {
        super(title);
    }
}
