package nature;

public class Sea extends NatureObject{

    public Sea() {
        super("море");
    }


    @Override
    public String toString() {
        return super.title;
    }

}
