package personajes;

public interface Dialogue {
    String speak(String speakerName, String context);
}