package personajes;

import nature.WorldContext;
import personajes.interfaces.BaseMove;
import personajes.states.ManMood;

public abstract class Man implements BaseMove {
    private String name;
    private ManMood mood;
    public Man(String name) {
        this.name = name;
    }
    public Man(String name, ManMood mood) {
        this.name = name;
        this.mood = mood;
    }
    public abstract void updateMoodBasedOnWorld(WorldContext context);


    public String getName() {
        return name;
    }

    private void setName(String name) {
        this.name = name;
    }

    public ManMood getMood() {
        return mood;
    }

    public void setMood(ManMood mood) {
        this.mood = mood;
    }


    @Override
    public void attack(Man man) {
        System.out.println(getName()+" атаковал "+man.getName());
    }
}
