package things;

public enum ThingState {
    APPEARED,
    MISAPPREHENDED
}
