package things.buildings;

import things.buildings.states.Material;

public class Tower extends Building{
    protected Tower(String title, Material material) {
        super(title, material);
    }

    @Override
    public String toString() {
        return super.toString();
    }

    @Override
    public boolean equals(Object obj) {
        return super.equals(obj);
    }

    @Override
    public int hashCode() {
        return super.hashCode();
    }
}
