@startuml
skinparam style strictstyle
left to right direction
skinparam linetype straight

package "People"{
    package "states"{
        enum GoType {
            RUN("бежит")
            COME_IN("вошёл")
            GO_NEXT("пошёл дальше")
        }

        enum ManJob {
            FARMER("фермер")
            KING("король")
            GUARDER("охранник")
        }

        enum ManMood {
            WOKE_UP("проснулся")
            IDLE("ничего не делает")
            DREAM("спит")
            WORK("работает")
            ANGRY("злится")
            FIGHT("напал")
            HUNGRY("голодный")
            SAD("грустит")
            ----
            + getDialogue(): Dialogue
            + randomMood(ManJob): ManMood
        }
    }

    package "Interfaces"{
        interface Dialogue {
            + speak(String speakerName, String context)
        }

        interface BaseMove {
            + go(GoType goType)
            + see(Thing thing)
            + attack(Man man)
        }

        interface ExtendedMove {
            + think(String thought)
            + fastOpenCloseEyes()
            + checkMood(ManMood mood)
        }
    }

    abstract class Man {
        - String name
        - ManMood mood
        + getName()
        + getMood()
        + setMood(ManMood)
        + {abstract} updateMoodBasedOnWorld(WorldContext context)
        + attack(Man man)
    }


    class MainHero {
        + ArrayList<Thing> seenThings
        + ArrayList<Personage> seenPersons
        + MainHero(String name)
        + think(String)
        + fastOpenCloseEyes()
        + checkMood(ManMood)
        + go(GoType)
        + see(Thing) throws ThingInvisibleException
        + updateMoodBasedOnWorld(WorldContext)
    }

    class Personage {
        - ManJob manJob
        - Helmet helmet
        - Spear spear
        + Personage()
        + Personage(String, ManJob, ManMood)
        + contact(Man observer, WorldContext context)
        + go(GoType)
        + see(Thing)
        + updateMoodBasedOnWorld(WorldContext)
    }
    package "Weapons"{
        class Helmet <<record>> {
            + toString()
        }

        class Spear <<record>> {
            + toString()
        }
    }
}


package "Nature"{
    package "states"{
        enum Weather {
            SUNNY("ясно")
            RAINY("дождливо")
            CLOUDY("пасмурно")
            + static random()
        }

        enum TimeOfDay {
            MORNING("утро")
            DAY("день")
            EVENING("вечер")
            NIGHT("ночь")
            + isNight()
            + isMorning()
            + static random()
        }
    }
    class Sea {
        + Sea()
        + toString()
    }

    class Sky {
        - Weather weather
        + Sky()
        + toString()
        + getWeather()
        + changeWeather()
        + appeared()
        + misapprehended()
    }
    abstract class NatureObject {
        + {protected} NatureObject(String title)
    }


    class WorldContext <<record>> {
        + Weather weather
        + TimeOfDay time
        + CastleState castleState
    }

    class World {
        - MainHero hero
        - Personage[] personages
        - Sky sky
        - Sea sea
        - Castle castle
        - ArrayList<Thing> AllThings
        - TimeOfDay timeOfDay
        + World()
        + PlayStory()
        - WorldGenerating()
        + updateTime()
       }
}

package "Things"{
    package "states"{
        enum Sound {
            CREAK("скрежет")
            SCRATCH("скрип")
            NO_SOUND("беззвучно")
            + static random()
        }

        enum ThingState {
            APPEARED
            MISAPPREHENDED
        }
    }

    abstract class Thing {
        + {field} final String title
        - ThingState state
        + {abstract} appeared()
        + {abstract} misapprehended()
        + changeVisibleState()
        + getState()
        + setState(ThingState)
    }
}

    package "Buildings"{
        package "states"{
            enum CastleState {
                INTACT("целый")
                DAMAGED("повреждённый")
                RUINED("разрушенный")
                GUARDED("под охраной")
            }

            enum Material {
                WOOD("дерева")
                STONE("камня")
                UNHANDLED_BIG_STONES("крупных необтесанных камней")
                + static random()
            }
        }
        abstract class Building {
            - Material material
            + {protected} Building(String title, Material material)
            + toString()
        }

        class Castle {
            - Door[] doors
            - Tower[] towers
            - Wall[] walls
            - CastleState stateCastle
            + Castle()
            + getStateCastle()
            + getAllConstructions() : Thing[]
            + toString()
        }

        class Door {
            - Hinge[] hinges
            - boolean isOpen
            + Door(String, Material)
            + isOpen()
            + tryToOpen()
            + toString()
        }

        class Tower {
            + Tower(String, Material)
        }

        class Wall {
            + Wall(String, Material)
        }

        class Hinge {
            - Sound sound
            + Hinge()
            + playSound()
            + getSound()
        }
    }
package "Exceptions"{
    class ThingInvisibleException <<exception>> {
        + ThingInvisibleException(String)
        + getMessage()
    }
}





' ================================
' INHERITANCE & IMPLEMENTATION
' ================================

Thing <|-- NatureObject
Thing <|-- Building
Thing <|-- Hinge


NatureObject <|-- Sea
NatureObject <|-- Sky

Building <|-- Castle
Building <|-- Door
Building <|-- Tower
Building <|-- Wall

Man <|-- MainHero
Man <|-- Personage

BaseMove <|-- ExtendedMove
BaseMove <.. Man

MainHero ..> ExtendedMove

' ================================
' COMPOSITION / AGGREGATION
' ================================

Thing o-- "0..*" ThingState
Hinge o-- "0..*" Sound
Castle o-- "0..*" CastleState
Building o-- "0..*" Material
Personage o-- "0..*" ManJob
Man o-- "0..*" ManMood

Castle *-- "0..*" Door
Castle *-- "0..*" Tower
Castle *-- "0..*" Wall

Door *-- "4" Hinge

Personage *-- "0..1" Helmet
Personage *-- "0..1" Spear

World *-- "1" MainHero
World *-- "1..5" Personage
World *-- "1" Sky
World *-- "1" Sea
World *-- "1" Castle
World *-- "0..*" Thing : AllThings

MainHero *-- "seen" Thing : seenThings
MainHero *-- "seen" Personage : seenPersons

Sky --> Weather
WorldContext --> Weather
WorldContext --> TimeOfDay
WorldContext --> CastleState

' ================================
' USAGE / DEPENDENCIES
' ================================

Personage ..> GoType: parameter in go
MainHero ..> GoType: parameter in go
Personage ..> ManMood: uses
ManMood ..> Dialogue: creates
Personage ..> Dialogue: uses
MainHero ..> ThingInvisibleException : throws
Personage ..> WorldContext : uses
MainHero ..> WorldContext : uses
World ..> WorldContext : creates




@enduml